[package]
name = "teddies"
version = "0.1.0"
edition = "2021"
exclude = ["*.csv"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typetag = "0.1"
serde_json = "1.0"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
filebuffer = "0.4.0"
profiling = "1.0"
polars = {version = "0.20.0", features = ["lazy"]}

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "csv_rw"
harness = false

[profile-release]
debug = true